--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -1,12 +1,7 @@
 .imageGalleryList{
     display: flex;
     flex-wrap: wrap;
-    gap: 16px; /* Відстань між картками */
+    gap: 16px;
     padding: 0;
     list-style: none;
 }
-
-/* .imageGalleryList{
-    min-width: 300px;
-    min-height: 300px;
-} */
